# idc-ms-chatgpt

./: .gitignore  README.md
.github/workflows/: main.yml
chatservice/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  go.mod  go.sum
chatservice/api/: chat.http
chatservice/cmd/chatservice/: main.go
chatservice/internal/domain/gateway/: chat.go
chatservice/internal/infra/grpc/server/: server.go
chatservice/internal/infra/grpc/service/: chat.go
chatservice/internal/infra/repository/: chat.go
chatservice/internal/infra/web/: chat_gpt_handler.go
chatservice/internal/infra/web/webserver/: webserver.go
chatservice/internal/usecase/chatcompletion/: completion.go
chatservice/internal/usecase/chatcompletionstream/: completion.go
chatservice/tiktoken-cffi/: Cargo.toml  README.md
chatservice/tiktoken-cffi/src/: lib.rs
dashboards/: dashboard.json  gometrics.json  kubernetes.json
k8s/: deploy-chatservice.yaml  deploy-keycloak.yaml  deploy-prometheus-grafana.yaml  deploy-webapp.yaml
terraform/: main.tf  terraform.tfvars
webapp/: .dockerignore  Dockerfile  deployment-chatservice.yaml  deployment-keycloak.yaml  entrypoint.sh  package-lock.json  package.json  server.js
webapp/src/app/: page.tsx
webapp/src/grpc/: chat-service-client.ts  client.ts
webapp/src/http/: http.ts
