[package]
name = "tiktoken-cffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "tiktoken"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2.140"
parking_lot = "0.12.1"
anyhow = "1.0.70"

# My fork that removes dependency on async-openai
[dependencies.tiktoken-rs]
git = "https://github.com/j178/tiktoken-rs.git"
branch = "main"
